--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,9 +60,8 @@
     <Analyzer Include="I:\Unity\2022.3.62f3\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Colorizer.cs" />
+    <Compile Include="Assets\Scripts\SpawnInspector.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
-    <Compile Include="Assets\Scripts\SpawnController.cs" />
     <Compile Include="Assets\Scripts\Clonable.cs" />
     <Compile Include="Assets\Scripts\Clicker.cs" />
     <Compile Include="Assets\Scripts\Raycaster.cs" />
